implement clean code